# pitch_game

./: .gitignore  README.md  pyproject.toml
pitch_game/: audio_pitch.py  calibration.py  config.py  main.py  melody_generator.py  renderer.py  scale_playback.py  target_trace.py  utils_music.py
pitch_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pitch_game/game/: audio_pitch.py  calibration.py  main.py  melody_generator.py  renderer.py  scale_playback.py  target_trace.py
pitch_game/song_gen/: config_songgen.py  generator.py
pitch_game/song_gen/ai/: render_backing.py
pitch_game/song_gen/midi/: arranger.py  exporter.py
pitch_game/song_gen/theory/: form.py  harmony.py  melody.py
pitch_game/tools/: build_song_library.py  test_ai_backing_render.py
tests/song_gen/: test_form.py  test_harmony.py  test_melody_constraints.py
tests/tools/: test_build_song_library.py
unit_test/: python_yin.py
