[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pitch-game"
version = "0.1.0"
description = "Real-time pitch training game"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "sounddevice",
  "matplotlib",
  "pretty_midi",
  "mido",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pitch_game*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
  "slow: slow integration tests",
]
